# binanceBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: future_coins.json  get_future_symbols_without_btc.py  get_price_with_btc.py
tools/: BTCUSDT_1m.csv  BTCUSDT_future_1m.csv  get_future_symbols_without_btc.py  get_price.py  price.py
